syntax = "proto3";
package dotbpe;

option csharp_namespace = "PiggyMetrics.Common";
option optimize_for = SPEED;


import public "dotbpe_option.proto";
import public "message.proto";


option (generic_objectfactory) = true;

service AuthService{
    option (service_id)= 1002 ;//设定服务ID


    rpc Create (UserReq) returns (VoidRsp){
        option (message_id)= 1 ;
    };

    rpc Auth(UserReq) returns (AuthRsp){
        option (message_id)= 2 ;
    }
}

message AuthRsp{
    int32 status = 1;
    string message = 2;
    string account=3;
}

